src/javacc/CMMParser.java
/* Generated By:JavaCC: Do not edit this line. CMMParser.java */
package javacc;

import java.io.FileInputStream;
import java.util.ArrayList;
import java.util.Scanner;

public class CMMParser implements CMMParserConstants {
    static SymbolTable table = new SymbolTable();
    public static void main(String args[]) throws ParseException {
        try {
            FileInputStream fileReader = new FileInputStream("testAnalyse.c");
            CMMParser parser = new CMMParser(fileReader);
            parser.procedure();
        }catch (Exception e){
            System.err.println(e);
        }
    }

  static final public void procedure() throws ParseException {
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      func();
    }
  }

  static final public void func() throws ParseException {
    type();
    jj_consume_token(IDENTIFIER);
    jj_consume_token(35);
    if (jj_2_3(3)) {
      type();
      jj_consume_token(IDENTIFIER);
      label_2:
      while (true) {
        if (jj_2_2(3)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(36);
        type();
        jj_consume_token(IDENTIFIER);
      }
    } else {
      ;
    }
    jj_consume_token(37);
    jj_consume_token(38);
    label_3:
    while (true) {
      if (jj_2_4(3)) {
        ;
      } else {
        break label_3;
      }
      statement();
    }
    jj_consume_token(39);
  }

  static final public String type() throws ParseException {
    if (jj_2_5(3)) {
      jj_consume_token(INT);
            {if (true) return Type.INT;}
    } else if (jj_2_6(3)) {
      jj_consume_token(REAL);
                {if (true) return Type.DOUBLE;}
    } else if (jj_2_7(3)) {
      jj_consume_token(VOID);
                {if (true) return Type.VOID;}
    } else if (jj_2_8(3)) {
      jj_consume_token(CHAR);
                {if (true) return Type.CHAR;}
    } else if (jj_2_9(3)) {
      jj_consume_token(STRING);
                  {if (true) return Category.STRING;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void statement() throws ParseException {
    if (jj_2_10(3)) {
      jj_consume_token(BREAK);
      jj_consume_token(SEMI);
    } else if (jj_2_11(3)) {
      jj_consume_token(RETURN);
      jj_consume_token(SEMI);
    } else if (jj_2_12(3)) {
      read_stm();
      jj_consume_token(SEMI);
    } else if (jj_2_13(3)) {
      write_stm();
      jj_consume_token(SEMI);
    } else if (jj_2_14(3)) {
      declare_stm();
      jj_consume_token(SEMI);
    } else if (jj_2_15(3)) {
      declare_arr_stm();
      jj_consume_token(SEMI);
    } else if (jj_2_16(3)) {
      assign_stm();
      jj_consume_token(SEMI);
    } else if (jj_2_17(3)) {
      while_stm();
    } else if (jj_2_18(3)) {
      do_stm();
    } else if (jj_2_19(3)) {
      for_stm();
    } else if (jj_2_20(3)) {
      if_stm();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public Value read_stm() throws ParseException {
    Value v = new Value();
    jj_consume_token(READ);
    jj_consume_token(35);
    jj_consume_token(37);
    Scanner in = new Scanner(System.in);
    v.cate = Category.STRING;
    v.value = in.nextLine();
    {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  static final public void write_stm() throws ParseException {
    Token token = null;
    Token index = null;
    Value value = null;
    Symbol symbol = null;
    jj_consume_token(WRITE);
    jj_consume_token(35);
    if (jj_2_21(3)) {
      value = value();
                System.out.println(value.value);
    } else if (jj_2_22(3)) {
      token = jj_consume_token(IDENTIFIER);
                symbol = table.query(token.image);
                System.out.println(symbol.getLength() < 0 ? symbol.getValueString() : symbol.getArray());
    } else if (jj_2_23(3)) {
      token = jj_consume_token(IDENTIFIER);
      jj_consume_token(40);
      index = jj_consume_token(INTEGER_NUM);
      jj_consume_token(41);
                symbol = table.query(token.image);
                if (symbol.getLength() < 0) {
                    {if (true) throw new ParseException(String.format("%d,%d: \u93cd\u56ea\u7611\u7ed7\ufe3f\u7b09\u93c4\ue21b\u669f\u7f01\u52ed\u88ab\u9368\ufffd", token.beginLine, token.beginColumn));}
                } else {
                    System.out.println(symbol.getArray(Integer.parseInt(index.image)));
                }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(37);
  }

  static final public Value value() throws ParseException {
    Token token = null;
    Value value = new Value();
    if (jj_2_24(3)) {
      token = jj_consume_token(INTEGER_NUM);
                          value.cate = Category.INT;
    } else if (jj_2_25(3)) {
      token = jj_consume_token(REAL_NUM);
                        value.cate = Category.REAL;
    } else if (jj_2_26(3)) {
      token = jj_consume_token(CHAR_C);
                      value.cate = Category.CHAR;
    } else if (jj_2_27(3)) {
      token = jj_consume_token(STRING);
                      value.cate = Category.STRING;
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
        value.value = token.image;
        {if (true) return value;}
    throw new Error("Missing return statement in function");
  }

  static final public void declare_stm() throws ParseException {
    Token token = null;
    Token tk = null;
    Symbol symbol;
    String type;
    Value value = null;
    int len;
    ArrayList<Value> list = new ArrayList<Value>();
    Value v;
    type = type();
    token = jj_consume_token(IDENTIFIER);
    if (jj_2_28(3)) {
      jj_consume_token(ASS_OP);
      value = arithmetic_exp();
    } else {
      ;
    }
            if (table.query(token.image) != null) {
                {if (true) throw new ParseException(String.format("%d,%d: \u95b2\u5d85\ue632\u7039\u6c2b\u7b9f\u9428\u52ec\u7223\u7487\u55d9\ue0c1", token.beginLine, token.beginColumn));}
            } else {
                symbol = new Symbol(type, token.image);
                if (value != null)
                    symbol.setValue(value.value);
                table.insert(symbol);
            }
    label_4:
    while (true) {
      if (jj_2_29(3)) {
        ;
      } else {
        break label_4;
      }
      jj_consume_token(36);
      token = jj_consume_token(IDENTIFIER);
      if (jj_2_30(3)) {
        jj_consume_token(ASS_OP);
        value = arithmetic_exp();
      } else {
        ;
      }
            if (table.query(token.image) != null) {
                {if (true) throw new ParseException(String.format("%d,%d: \u95b2\u5d85\ue632\u7039\u6c2b\u7b9f\u9428\u52ec\u7223\u7487\u55d9\ue0c1", token.beginLine, token.beginColumn));}
            } else {
                symbol = new Symbol(type, token.image);
                if (value != null)
                    symbol.setValue(value.value);
                table.insert(symbol);
            }
    }
  }

  static final public void declare_arr_stm() throws ParseException {
    Token token = null;
    Token tk = null;
    Symbol symbol;
    String type;
    Value value = null;
    int len;
    ArrayList<Value> list = new ArrayList<Value>();
    Value v;
    type = type();
    token = jj_consume_token(IDENTIFIER);
    jj_consume_token(40);
    tk = jj_consume_token(INTEGER_NUM);
                                                         len = Integer.parseInt(tk.image);
    jj_consume_token(41);
    if (jj_2_33(3)) {
      jj_consume_token(ASS_OP);
      jj_consume_token(38);
      if (jj_2_32(3)) {
        v = value();
                                 list.add(v);
        label_5:
        while (true) {
          if (jj_2_31(3)) {
            ;
          } else {
            break label_5;
          }
          jj_consume_token(36);
          v = value();
                                                               list.add(v);
        }
      } else {
        ;
      }
      jj_consume_token(39);
    } else {
      ;
    }
            if (table.query(token.image) != null) {
                {if (true) throw new ParseException(String.format("%d,%d: \u95b2\u5d85\ue632\u7039\u6c2b\u7b9f\u9428\u52ec\u7223\u7487\u55d9\ue0c1", token.beginLine, token.beginColumn));}
            } else {
                symbol = new Symbol(type, token.image);
                if (list.size() >= 0) {
                    symbol.setLength(len);
                    for (int i = 0; i < list.size(); i++)
                        symbol.setArrayValue(i, list.get(i).value);
                }
                table.insert(symbol);
            }
    label_6:
    while (true) {
      if (jj_2_34(3)) {
        ;
      } else {
        break label_6;
      }
      jj_consume_token(36);
      token = jj_consume_token(IDENTIFIER);
      jj_consume_token(40);
      tk = jj_consume_token(INTEGER_NUM);
                                                  len = Integer.parseInt(tk.image);
      jj_consume_token(41);
      if (jj_2_37(3)) {
        jj_consume_token(ASS_OP);
        jj_consume_token(38);
        if (jj_2_36(3)) {
          v = value();
                                 list.add(v);
          label_7:
          while (true) {
            if (jj_2_35(3)) {
              ;
            } else {
              break label_7;
            }
            jj_consume_token(36);
            v = value();
                                                               list.add(v);
          }
        } else {
          ;
        }
        jj_consume_token(39);
      } else {
        ;
      }
            if (table.query(token.image) != null) {
                {if (true) throw new ParseException(String.format("%d,%d: \u95b2\u5d85\ue632\u7039\u6c2b\u7b9f\u9428\u52ec\u7223\u7487\u55d9\ue0c1", token.beginLine, token.beginColumn));}
            } else {
                symbol = new Symbol(type, token.image);
                if (list.size() >= 0) {
                    symbol.setLength(len);
                    for (int i = 0; i < list.size(); i++)
                        symbol.setArrayValue(i, list.get(i).value);
                }
                table.insert(symbol);
            }
    }
  }

  static final public void assign_stm() throws ParseException {
    Token token = null;
    Token id = null;
    Token index = null;
    Symbol symbol;
    Value v;
    if (jj_2_42(3)) {
      token = jj_consume_token(SELF_OP);
      id = jj_consume_token(IDENTIFIER);
        symbol = table.query(id.image);
        if (symbol == null)
            {if (true) throw new ParseException(String.format("%d,%d: \u93c8\ue044\u757e\u6d94\u590c\u6b91\u93cd\u56ea\u7611\u7ed7\ufffd", id.beginLine, id.beginColumn));}

            switch(token.image) {
            case "++":
                symbol.selfAdd();
                break;
            case "--":
                symbol.selfMin();
                break;
            }
    } else if (jj_2_43(3)) {
      id = jj_consume_token(IDENTIFIER);
      token = jj_consume_token(SELF_OP);
        symbol = table.query(id.image);
        if (symbol == null)
            {if (true) throw new ParseException(String.format("%d,%d: \u93c8\ue044\u757e\u6d94\u590c\u6b91\u93cd\u56ea\u7611\u7ed7\ufffd", id.beginLine, id.beginColumn));}

            switch(token.image) {
            case "++":
                symbol.selfAdd();
                break;
            case "--":
                symbol.selfMin();
                break;
            }
    } else if (jj_2_44(3)) {
      id = jj_consume_token(IDENTIFIER);
      token = jj_consume_token(ASS_OP);
      if (jj_2_38(3)) {
        v = arithmetic_exp();
      } else if (jj_2_39(3)) {
        v = read_stm();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
        symbol = table.query(id.image);
        if (symbol == null)
            {if (true) throw new ParseException(String.format("%d,%d: \u93c8\ue044\u757e\u6d94\u590c\u6b91\u93cd\u56ea\u7611\u7ed7\ufffd", id.beginLine, id.beginColumn));}

        symbol.setValue(v.value);
    } else if (jj_2_45(3)) {
      id = jj_consume_token(IDENTIFIER);
      jj_consume_token(40);
      index = jj_consume_token(INTEGER_NUM);
      jj_consume_token(41);
      token = jj_consume_token(ASS_OP);
      if (jj_2_40(3)) {
        v = arithmetic_exp();
      } else if (jj_2_41(3)) {
        v = read_stm();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
        symbol = table.query(id.image);
        if (symbol == null)
            {if (true) throw new ParseException(String.format("%d,%d: \u93c8\ue044\u757e\u6d94\u590c\u6b91\u93cd\u56ea\u7611\u7ed7\ufffd", id.beginLine, id.beginColumn));}

        symbol.setArrayValue(Integer.parseInt(index.image), v.value);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void while_stm() throws ParseException {
    boolean logic;
    jj_consume_token(WHILE);
    jj_consume_token(35);
    logic = logic_exp();
    jj_consume_token(37);
    jj_consume_token(38);
    label_8:
    while (true) {
      if (jj_2_46(3)) {
        ;
      } else {
        break label_8;
      }
      statement();
    }
    jj_consume_token(39);

  }

  static final public void do_stm() throws ParseException {
    jj_consume_token(DO);
    jj_consume_token(38);
    label_9:
    while (true) {
      if (jj_2_47(3)) {
        ;
      } else {
        break label_9;
      }
      statement();
    }
    jj_consume_token(39);
    jj_consume_token(WHILE);
    jj_consume_token(35);
    logic_exp();
    jj_consume_token(37);
  }

  static final public void for_stm() throws ParseException {
    jj_consume_token(FOR);
    jj_consume_token(35);
    declare_stm();
    jj_consume_token(SEMI);
    logic_exp();
    jj_consume_token(SEMI);
    assign_stm();
    jj_consume_token(37);
    jj_consume_token(38);
    label_10:
    while (true) {
      if (jj_2_48(3)) {
        ;
      } else {
        break label_10;
      }
      statement();
    }
    jj_consume_token(39);
  }

  static final public void if_stm() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(35);
    logic_exp();
    jj_consume_token(37);
    jj_consume_token(38);
    label_11:
    while (true) {
      if (jj_2_49(3)) {
        ;
      } else {
        break label_11;
      }
      statement();
    }
    jj_consume_token(39);
    label_12:
    while (true) {
      if (jj_2_50(3)) {
        ;
      } else {
        break label_12;
      }
      if (jj_2_53(3)) {
        jj_consume_token(ELSE);
        if (jj_2_51(3)) {
          if_stm();
        } else {
          ;
        }
      } else if (jj_2_54(3)) {
        jj_consume_token(38);
        label_13:
        while (true) {
          if (jj_2_52(3)) {
            ;
          } else {
            break label_13;
          }
          statement();
        }
        jj_consume_token(39);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public Value arithmetic_exp() throws ParseException {
    Value v1;
    Value v2 = null;
    Value v = new Value();
    Token token = null;
    v1 = arithmetic_item();
    label_14:
    while (true) {
      if (jj_2_55(3)) {
        ;
      } else {
        break label_14;
      }
      token = jj_consume_token(BIN_AR_OP_2);
      v2 = arithmetic_item();
    }
        if (v2 == null) {
            {if (true) return v1;}
        }
        if (!Utils.cateConvert(v1.cate, v2.cate)) {
            {if (true) throw new ParseException(String.format("%d,%d: \u7eeb\u8bf2\u7037\u6d93\u5d84\u7af4\u9477\ufffd", token.beginLine, token.beginColumn));}
        } else {
            v.cate = Utils.calcCate(v1.cate, v2.cate);
            switch(token.image) {
                case "+":
                    v.value = Double.toString(Double.parseDouble(v1.value) + Double.parseDouble(v2.value));
                    {if (true) return v;}
                case "-":
                    v.value = Double.toString(Double.parseDouble(v1.value) - Double.parseDouble(v2.value));
                    {if (true) return v;}
            }
            {if (true) return v1;}
        }
    throw new Error("Missing return statement in function");
  }

  static final public Value arithmetic_item() throws ParseException {
    Value v1;
    Value v2 = null;
    Value v = new Value();
    Token token = null;
    v1 = arithmetic_fac();
    label_15:
    while (true) {
      if (jj_2_56(3)) {
        ;
      } else {
        break label_15;
      }
      token = jj_consume_token(BIN_AR_OP_1);
      v2 = arithmetic_fac();
    }
        if (v2 == null) {
            {if (true) return v1;}
        }
        if (!Utils.cateConvert(v1.cate, v2.cate)) {
            {if (true) throw new ParseException(String.format("%d,%d: \u7eeb\u8bf2\u7037\u6d93\u5d84\u7af4\u9477\ufffd", token.beginLine, token.beginColumn));}
        } else {
            v.cate = Utils.calcCate(v1.cate, v2.cate);
            switch(token.image) {
                case "*":
                    v.value = Double.toString(Double.parseDouble(v1.value) * Double.parseDouble(v2.value));
                    {if (true) return v;}
                case "/":
                    v.value = Double.toString(Double.parseDouble(v1.value) / Double.parseDouble(v2.value));
                    {if (true) return v;}
                case "%":
                    v.value = Double.toString(Double.parseDouble(v1.value) % Double.parseDouble(v2.value));
                    {if (true) return v;}
            }
        }
        {if (true) return v1;}
    throw new Error("Missing return statement in function");
  }

  static final public Value arithmetic_fac() throws ParseException {
    Token token = null;
    Value value = null;
    if (jj_2_57(3)) {
      token = jj_consume_token(IDENTIFIER);
            Symbol symbol = table.query(token.image);
            if (symbol == null) {
                {if (true) throw new ParseException(String.format("%d,%d: \u93c8\ue044\u757e\u6d94\u590c\u6b91\u93cd\u56ea\u7611\u7ed7\ufffd", token.beginLine, token.beginColumn));}
            }
            value = new Value();
            value.cate = Utils.type2Cate(symbol.getType());
            value.value = symbol.getValueString();
            {if (true) return value;}
    } else if (jj_2_58(3)) {
      value = value();
            {if (true) return value;}
    } else if (jj_2_59(3)) {
      jj_consume_token(35);
      value = arithmetic_exp();
      jj_consume_token(37);
            {if (true) return value;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public boolean logic_exp() throws ParseException {
    boolean v1;
    boolean v2 = false;
    Token token = null;
    v1 = logic_item();
    label_16:
    while (true) {
      if (jj_2_60(3)) {
        ;
      } else {
        break label_16;
      }
      token = jj_consume_token(LOGIC_OP);
      v2 = logic_item();
    }
        if (token == null)
            {if (true) return v1;}

        switch(token.image) {
            case "&&":
                {if (true) return v1 && v2;}
            case "||":
                {if (true) return v1 || v2;}
        }
        {if (true) return false;}
    throw new Error("Missing return statement in function");
  }

  static final public boolean logic_item() throws ParseException {
    boolean v;
    Token token = null;
    Value v1;
    Value v2 = null;
    if (jj_2_62(3)) {
      jj_consume_token(35);
      v = logic_item();
      jj_consume_token(37);
                            {if (true) return v;}
    } else if (jj_2_63(3)) {
      jj_consume_token(UN_LOG_OP);
      v = logic_item();
                                  {if (true) return !v;}
    } else if (jj_2_64(3)) {
      token = jj_consume_token(BOOL);
                    if (token.image.equals("true")) {if (true) return true;} else {if (true) return false;}
    } else if (jj_2_65(3)) {
      v1 = arithmetic_exp();
      label_17:
      while (true) {
        if (jj_2_61(3)) {
          ;
        } else {
          break label_17;
        }
        token = jj_consume_token(RELATION_OP);
        v2 = arithmetic_exp();
      }
            if (v2 == null) {
                {if (true) return Double.parseDouble(v1.value) > 0;}
            }
